fix: added left text align to the cards

--- a/app/scss/_cards.scss
+++ b/app/scss/_cards.scss
@@ -4,6 +4,7 @@
   border-radius: rem(8px);
   padding: rem(40px) rem(32px) rem(32px) rem(32px);
   font-size: rem(13px);
+  text-align: left;
 
   &__header {}
 
